<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhi.mcassignment3.SharedPreferences">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="16dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/your_name" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneText"
            android:layout_margin="8dp"
            android:inputType="phone"
            android:hint="@string/your_contact_number" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp" />
    </LinearLayout>
</FrameLayout>
